2023-07-06T01:17:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5470511062 # 964
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-06
* notice: last 14d: unq all: 10 17
* notice: prev accum: outdated-unq outdated-all / unq all: 106 125 / 112 134
* notice: next accum: outdated-unq outdated-all / unq all: 106 125 / 117 142
* notice: prev exec diff / last date diff / accum: unq all: +5 +8 -0 -0 / +8 +13 -0 -0 / 8 13
* notice: removed / changed dates: [] / [2023-07-05]

2023-07-05T16:18:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5466607530 # 963
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 106 125 / 109 129
* notice: next accum: outdated-unq outdated-all / unq all: 106 125 / 112 134
* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2023-07-05]

2023-07-05T08:17:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5461994560 # 962
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-05
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 105 124 / 109 129
* notice: next accum: outdated-unq outdated-all / unq all: 106 125 / 109 129
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-21] / []

2023-07-04T08:17:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5452406880 # 959