@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-06T01:17:44Z",
-  "count_outdated" : 125,
-  "uniques_outdated" : 106,
-  "count" : 142,
-  "uniques" : 117,
+  "timestamp" : "2023-07-06T08:17:32Z",
+  "count_outdated" : 127,
+  "uniques_outdated" : 107,
+  "count" : 143,
+  "uniques" : 118,
   "clones" : [
-    {
-      "timestamp": "2023-06-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-23T00:00:00Z",
       "count": 1,
@@ -40,6 +31,15 @@
       "uniques": 8,
       "uniques_minmax": [ 3, 8 ],
       "uniques_decinc": [ 0, 8 ]
+    },
+    {
+      "timestamp": "2023-07-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
