@@ -1,12 +1,7 @@
 {
-  "count": 17,
-  "uniques": 10,
+  "count": 16,
+  "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2023-06-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-06-23T00:00:00Z",
       "count": 1,
@@ -21,6 +16,11 @@
       "timestamp": "2023-07-05T00:00:00Z",
       "count": 13,
       "uniques": 8
+    },
+    {
+      "timestamp": "2023-07-06T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
